--- a/src/app/shared/shared/components/topbar/topbar.component.html
+++ b/src/app/shared/shared/components/topbar/topbar.component.html
@@ -18,8 +18,8 @@
         <span class="m-l-5 noselect" >Admin</span>
       </p>
       <p class="navbar-brand pointer" [routerLink]="['/my-account']" routerLinkActive="active" (click)="navigateToMyAccount()">
-        <i class="fa fa-user" aria-hidden="true"></i>
-        <span class="m-l-5 noselect" >My Account</span></p>
+        <i [ngClass]="currentUser?.authToken ? 'fa fa-user' : 'fa fa-sign-in'" aria-hidden="true"></i>
+        <span class="m-l-5 noselect" >{{currentUser?.authToken ? 'My Account': 'Login'}}</span></p>
       <p class="navbar-brand pointer position-relative">
         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
         <span class="m-l-5 noselect">Cart</span>
