--- a/src/app/views/admin-views/category/category.component.html
+++ b/src/app/views/admin-views/category/category.component.html
@@ -5,28 +5,35 @@
       </button>
 </div>
 <div class="modal-body">
-    <form>
-        <div>
+    <form [formGroup]="categoryForm">
+        <div class="form-group h-px-75">
             <label for="category id">Category Id</label>
-            <input type="text" class="form-control" id="category id" placeholder="Enter The Category Id">
+            <input type="text" class="form-control" id="category id" placeholder="Enter The Category Id" formControlName="id">
+            <p class="error" *ngIf="isValidField(categoryForm, 'id')">
+                {{getErrorMessage(categoryForm, validationMessages, 'id')}}
+            </p>
         </div>
-        <br>
-        <div class="form-group">
+        <div class="form-group h-px-75">
             <label for="category">Enter Category Name</label>
-            <input type="email" class="form-control" id="category">
+            <input type="text" class="form-control" id="category" formControlName="name">
+            <p class="error" *ngIf="isValidField(categoryForm, 'name')">
+                {{getErrorMessage(categoryForm, validationMessages, 'name')}}
+            </p>
         </div>
-        <div class="form-group" class="size">
+        <div class="form-group h-px-75">
             <label>Status</label>
-            <br>
-            <select class="btn btn-secondary" class="dropdown">
-                <option value="active">Active</option>
-                <option value="inactive">Inactive</option>
+            <select class="custom-select"  required formControlName="active">
+                <option value="">Select Status</option>
+                <option [value]="status.value" *ngFor="let status of statusList">{{status.label}}</option>
             </select>
+            <p class="error" *ngIf="isValidField(categoryForm, 'active')">
+                {{getErrorMessage(categoryForm, validationMessages, 'active')}}
+            </p>
         </div>
         <br>
     </form>
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-dark" (click)="modal.dismiss('Cross click')">Cancel</button>
-    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+    <button type="button" class="btn btn-primary" (click)="saveCategory()" [disabled]="categoryForm.invalid">Save</button>
 </div>
