--- a/src/app/views/admin-views/admin-products-list/admin-modify-product/admin-modify-product.component.html
+++ b/src/app/views/admin-views/admin-products-list/admin-modify-product/admin-modify-product.component.html
@@ -1,17 +1,21 @@
 <div class="container m-t-70">
   <div class="card m-t-30">
     <div class="card-body">
+
+      <form action="" [formGroup]="productForm" (ngSubmit)="createProduct()" >
       <div class="row">
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
             <label for="name">Product Name</label>
-            <input type="name" placeholder="Enter Product Name" class="form-control" id="name">
+            <input type="text" formControlName="name" placeholder="Enter Product Name" class="form-control" id="name">&nbsp;
+            <small *ngIf=" productForm.get('name').touched && productForm.get('name').hasError('required')" class="  text-danger">Product Name is required</small>
           </div>
         </div>
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
             <label for="number">M.R.P Price</label>
-            <input type="number" placeholder="Enter M.R.P Price" class="form-control" id="number">
+            <input type="number" formControlName="mrp" (input)="discountAmt('mrp')" placeholder="Enter M.R.P Price" class="form-control" id="number">&nbsp;
+            <small *ngIf=" productForm.get('mrp').touched && productForm.get('mrp').hasError('required')" class="  text-danger">M.R.P Price is required</small>
           </div>
         </div>
       </div>
@@ -19,13 +23,14 @@
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
             <label for=" ">Discount Price</label>
-            <input type="number" placeholder="Enter discount price" class="form-control" id="number">
+            <input type="number" formControlName="discountPrice" (input)="discountAmt('price')" placeholder="Enter discount price" class="form-control" id="number">&nbsp;
+            <small *ngIf="productForm.get('discountPrice').touched && productForm.get('mrp').hasError('required')" class="  text-danger">Please Enter M.R.P Price First</small>
           </div>
         </div>
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
             <label for=" ">Discount</label>
-            <input type="number" placeholder="Enter discount price in percentage" class="form-control" id="number">
+            <input type="number" formControlName="discountPricepercentage" (input)="discountAmt('percentage')" placeholder="Enter discount price in percentage" class="form-control" id="number">
           </div>
         </div>
       </div>
@@ -33,13 +38,13 @@
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
             <label for="number ">Cost</label>
-            <input type="number" placeholder="Enter cost after discount price" class="form-control" id="number">
+            <input type="number" readonly  formControlName="cost" placeholder="Enter cost after discount price" class="form-control" name="cost">
           </div>
         </div>
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
             <label for=" ">Available stock</label>
-            <input type="number" class="form-control" placeholder="Enter number of stocks">
+            <input type="number"  formControlName="availableStock" class="form-control" placeholder="Enter number of stocks">
           </div>
         </div>
       </div>
@@ -48,11 +53,11 @@
           <label>Select stock status</label>
           <div class="form-group">
             <div class="custom-control custom-radio custom-control-inline">
-              <input type="radio" class="custom-control-input" id="yes" name="no">
+              <input type="radio"  value="yes" name="isStockAvailable" formControlName="isStockAvailable"  class="custom-control-input" >
               <label class="custom-control-label" for="yes">Yes</label>
             </div>
             <div class="custom-control custom-radio custom-control-inline">
-              <input type="radio" class="custom-control-input" id="no" name="no">
+              <input type="radio" value="no"  name="isStockAvailable" formControlName="isStockAvailable" class="custom-control-input" >
               <label class="custom-control-label" for="no">No</label>
             </div>
           </div>
@@ -64,7 +69,7 @@
           <div class="browse-btn">
             <input type="file" name="cameraImg" id="cameraImg" (change)="onSelectedFile($event)" />
             <div class="browse-image">
-              <img src="assets/images/icons/camera.png" width="60px" />
+              <img src="{{productImg}}" width="60px" />
               <p>Browse image</p>
             </div>
           </div>
@@ -73,15 +78,15 @@
       <hr>
       <div class="form-group">
         <label>Product Description</label>
-        <textarea class="form-control" rows="2"></textarea>
-        <div class="text-center  m-t-20">
-          <button class="btn btn-outline-primary btn-xl" type="submit">Add</button>
-        </div>
+        <textarea class="form-control" rows="2"></textarea> 
       </div>
       <div class="d-flex justify-content-end action-buttons m-t-10 ">
         <button type="button" class="btn btn-dark" [routerLink]="['/admin/products-list']">Cancel</button>
-        <button type="submit" class="btn btn-primary m-l-16 ">Create</button>
+        <button type="submit"  [disabled]="!productForm.valid"  class="btn btn-primary m-l-16 ">Create</button>
       </div>
+    </form>
+
+
     </div>
   </div>
 </div>
