--- a/src/app/views/user-views/user-management/address-list/modify-address/modify-address.component.html
+++ b/src/app/views/user-views/user-management/address-list/modify-address/modify-address.component.html
@@ -4,74 +4,80 @@
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
+<form [formGroup]="addressForm" (ngSubmit)="addAddress()">
 <div class="modal-body">
-  <form>
-    <div class="btn-group btn-group-toggle d-flex justify-content-between" ngbRadioGroup name="radioBasic" [(ngModel)]="addressType">
+ 
+    <div class="btn-group btn-group-toggle d-flex justify-content-between" ngbRadioGroup name="radioBasic" >
 
       <label [ngClass]="addressType === 'HOME' ? 'address-type-active': 'address-type'" ngbButtonLabel>
-        <input type="radio" ngbButton value="HOME"><i class="fa fa-home"></i> Home
+        <input type="radio" formControlName="type" name="type" ngbButton value="HOME"><i class="fa fa-home"></i> Home
       </label>
       <label  [ngClass]="addressType === 'OFFICE' ? 'address-type-active': 'address-type'" ngbButtonLabel>
-        <input type="radio" ngbButton value="OFFICE"><i class="fa fa-building" aria-hidden="true"></i>
+        <input type="radio"  formControlName="type" name="type"  ngbButton value="OFFICE"><i class="fa fa-building" aria-hidden="true"></i>
         Office
       </label>
       <label  [ngClass]="addressType === 'OTHERS' ? 'address-type-active': 'address-type'" ngbButtonLabel>
-        <input type="radio" ngbButton value="OTHERS"><i class="fa fa-question-circle" aria-hidden="true"></i>
+        <input type="radio"  formControlName="type" name="type"  ngbButton value="OTHERS"><i class="fa fa-question-circle" aria-hidden="true"></i>
         Others
       </label>
     </div>
     <div class="form-group">
-      <label>Country</label>
-      <input type="text" class="form-control" placeholder="India" readonly>
+      <label>Country</label> 
+      <select formControlName="country" name="country" (change)="getState()" disabled  class="form-control" >
+        <ng-container *ngFor="let cntr of countriesList">
+          <option value="{{cntr.country_name}}">{{cntr.country_name}}</option>
+        </ng-container>
+      </select>
       <div class="input-group-append">
       </div>
     </div>
     <div class="form-group">
-      <label>State</label>
-      <input type="text" class="form-control" placeholder="Enter state name">
+      <label>State</label> 
+
+      <select formControlName="state" name="state" (change)="getCity()"  class="form-control" >
+        <ng-container *ngFor="let state of stateList">
+          <option value="{{state.state_name}}">{{state.state_name}}</option>
+        </ng-container>
+      </select>
+
       <div class="input-group-append">
       </div>
     </div>
     <div class="form-group">
-      <label>City</label>
-      <input type="text" class="form-control" placeholder="Enter city name">
+      <label>City</label> 
+
+      <select formControlName="city" name="city"     class="form-control" >
+        <ng-container *ngFor="let city of cityList">
+          <option value="{{city.city_name}}">{{city.city_name}}</option>
+        </ng-container>
+      </select>
       <div class="input-group-append">
       </div>
     </div>
-    <div class="form-group">
-      <label>Full name</label>
-      <input type="text" class="form-control" placeholder="Enter full name">
-      <div class="input-group-append">
-      </div>
-    </div>
-    <div class="form-group">
-      <label>Mobile number</label>
-      <input type="text" class="form-control" placeholder="Enter mobile number">
-      <div class="input-group-append">
-      </div>
-    </div>
+    
     <div class="form-group">
       <label>Street Address</label>
-      <input type="text" class="form-control" placeholder="Flat / House No./Floor / Building">
+      <input type="text" class="form-control" formControlName="street" name="street" placeholder="Flat / House No./Floor / Building">
       <div class="input-group-append">
       </div>
     </div>
     <div class="form-group">
       <label>Landmark</label>
-      <input type="text" class="form-control">
+      <input type="text" formControlName="landmark" name="landmark" class="form-control">
       <div class="input-group-append">
       </div>
     </div>
     <div class="form-group">
       <label>Pincode</label>
-      <input type="text" class="form-control" placeholder="6 digits [0-9] pincode">
+      <input type="text" class="form-control"  formControlName="pincode" name="pincode"  placeholder="6 digits [0-9] pincode">
       <div class="input-group-append">
       </div>
     </div>
 
-  </form>
+ 
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-outline-dark" (click)="modal.dismiss('Cross click')">Cancel</button>
-  <button type="button" class="btn btn-outline-primary " (click)="modal.close('Save click')">Save</button>
+  <button type="submit" class="btn btn-outline-primary " >Save</button>
 </div>
+</form>
