--- a/src/app/shared/shared/components/topbar/topbar.component.html
+++ b/src/app/shared/shared/components/topbar/topbar.component.html
@@ -13,17 +13,22 @@
       </li>
     </ul>
     <div>
-      <p class="navbar-brand pointer" [routerLink]="['/admin']" routerLinkActive="active" *ngIf="currentUser?.role.role_id === 1">
+      <p class="navbar-brand pointer" [routerLink]="['/admin']" routerLinkActive="active"
+        *ngIf="currentUser?.role.role_id === 1">
         <i class="fa fa-lock" aria-hidden="true"></i>
-        <span class="m-l-5 noselect" >Admin</span>
+        <span class="m-l-5 noselect">Admin</span>
       </p>
-      <p class="navbar-brand pointer" [routerLink]="['/my-account']" routerLinkActive="active" (click)="navigateToMyAccount()">
+      <p class="navbar-brand pointer" [routerLink]="['/my-account']" routerLinkActive="active"
+        (click)="navigateToMyAccount()">
         <i [ngClass]="currentUser?.authToken ? 'fa fa-user' : 'fa fa-sign-in'" aria-hidden="true"></i>
-        <span class="m-l-5 noselect" >{{currentUser?.authToken ? 'My Account': 'Login'}}</span></p>
+        <span class="m-l-5 noselect">{{currentUser?.authToken ? 'My Account': 'Login'}}</span></p>
       <p class="navbar-brand pointer position-relative">
         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
         <span class="m-l-5 noselect">Cart</span>
         <span class="cart-count">{{totalCartCount}}</span>
+      </p>
+      <p class="navbar-brand pointer position-relative p-l-20" (click)="logout()">
+        <i class="fa fa-power-off" aria-hidden="true" ></i>
       </p>
     </div>
   </div>
