--- a/src/app/views/admin-views/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-views/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,22 @@
-<div>
+<!-- <div>
     <button class="btn btn-primary" routerLink="/admin/category-list">Category list</button>
     <button class="btn btn-primary" routerLink="/admin/products-list">Products list</button>
+</div> -->
 
+<div class="d-flex justify-content-center w-100 flex-wrap">
+    <ng-container *ngFor="let dashboardItem of dashboardData; let i = index">
+    <div class="card m-r-15 m-b-15" style="width: 30rem;height: 150px;border-radius: 20px;margin-top: 10px;" (click)="navigateToDashboardItem(dashboardItem)">
+        <div class="card-body color{{i}} pointer">
+            <div class="d-flex justify-content-center heading">
+                {{dashboardItem.label}}
+            </div>
+            <div class="d-flex justify-content-start stats">
+                    Active: {{dashboardResponse && dashboardResponse[dashboardItem.key + '_active']}}
+            </div>
+            <div class="d-flex justify-content-end stats">
+                Inactive: {{dashboardResponse && dashboardResponse[dashboardItem.key + '_active']}}
+            </div>
+        </div>
+    </div>
+</ng-container>
 </div>
